--- a/content/classes/01-background/02-lit-review/level-2/index.Rmd
+++ b/content/classes/01-background/02-lit-review/level-2/index.Rmd
@@ -14,7 +14,7 @@ We should have a pretty good idea now how to read a paper and some general insig
 
 Your goal now is to build an annotated bibliography for your research project that helps you understand what is known and see opportunities where you can contribute to scientific understanding.
 
-An annotated bibliography is a list of well formatted references to specific papers with a few of sentences after each that describe what the paper showed and what relevance it has to your project. An example can be seen [here](). Keeping track of what your reading and what it teaches you is an essential skill of a research scientist. There is even software that can help you keepo track of things digitally (e.g. [Zotero](https://www.zotero.org/)).
+An annotated bibliography is a list of well formatted references to specific papers with a few of sentences after each that describe what the paper showed and what relevance it has to your project. An example can be seen [here](https://classroom.google.com/c/NDg3ODE3MzU4NzEw/m/NDg3ODE4MDY2ODEw/details). Keeping track of what your reading and what it teaches you is an essential skill of a research scientist. There is even software that can help you keepo track of things digitally (e.g. [Zotero](https://www.zotero.org/)).
 
 In the above example, each paper is referenced in a similar format. You may come across a number of different formats in your searches or in your previous experiences: each field/journal does things slightly different. For the sake of this project, we're going to use the format used by the [American Geophysical Union](https://www.agu.org/Publish-with-AGU/Publish/Author-Resources/Grammar-Style-Guide#referenceformat):
 
