--- a/content/classes/02-data-report/02-hyptotheses/level-2/index.Rmd
+++ b/content/classes/02-data-report/02-hyptotheses/level-2/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Annotated Bibliography"
+title: "Project Hypotheses"
 author: Ben Harden
 date: '2022-05-05'
 level: 2
@@ -7,45 +7,38 @@ slug: []
 categories: []
 tags: []
 draft: no
-quiz: https://classroom.google.com/c/NDg3ODE3MzU4NzEw/a/NDg3ODE4MzQyMjA2/details
+quiz: https://classroom.google.com/c/NDg3ODE3MzU4NzEw/a/NTM0Mzg4ODk4NjIx/details
 ---
 
-We should have a pretty good idea now how to read a paper and some general insight into how and where to find additional ones.
-
-Your goal now is to build an annotated bibliography for your research project that helps you understand what is known and see opportunities where you can contribute to scientific understanding.
-
-An annotated bibliography is a list of well formatted references to specific papers with a few of sentences after each that describe what the paper showed and what relevance it has to your project. An example can be seen [here](). Keeping track of what your reading and what it teaches you is an essential skill of a research scientist. There is even software that can help you keepo track of things digitally (e.g. [Zotero](https://www.zotero.org/)).
-
-In the above example, each paper is referenced in a similar format. You may come across a number of different formats in your searches or in your previous experiences: each field/journal does things slightly different. For the sake of this project, we're going to use the format used by the [American Geophysical Union](https://www.agu.org/Publish-with-AGU/Publish/Author-Resources/Grammar-Style-Guide#referenceformat):
-
-Quoting from their site, the format is:
-
-Author, A. A., Author, B. B., & Author, C. C. (year). Title of article. *Title of periodical, xx(x)*, pp-pp. https://doi.org/xx.xxxx/xxxxxxxx
-
-Where:
-
-* *Title of periodical* is the journal name
-* *xx(x)* is the volume (and issue) number
-* pp-pp is the page range
-* The doi hyperlink is a universal reference link to the paper. All papers now have a DOI and should be included in the reference.
-
-Some examples:
-
-Deng, A., & Stauffer, D. R. (2006). On improving 4-km mesoscale model simulations. *Journal of Applied Meteorology and Climatology, 45(3)*, 361–381. https://doi.org/10.1175/JAM2341.1
-
-Wang, C. (2005). A modeling study of the response of tropical deep convection to the increase of cloud condensational nuclei concentration: 1. Dynamics and microphysics. *Journal of Geophysical Research: Atmospheres, 110*, D21211. https://doi.org/10.1029/2004JD005720
+Now that we've reviewed our understanding of what a traditional hypothesis is and how we can apply that to oceanography, we need to apply that understanding to our research project.
 
 ## Exercise
 
-You can collaborate on this work in your research topic teams and share resources, but you will need to submit your own work including finding some (but not all) unique papers.
+Your job as a team is to create a list of possible hypotheses about your topic in the region of interest. 
 
-You need to use your searching and reading skills to:
+You should remember that a good hypothesis is:
 
-* Write a goal sentence - what are you wanting to find out from your papers?
-* Find 3-5 papers that help you reach that goal in the region of interest. At least two should be unique from your peers.
-* Read the as much of the papers as you need to reach your stated goal
-* Create a list of properly formatted references to the papers
-* Write 2 or 3 sentences after each describing what the paper shows and how it is useful to your project
+* Based on background understanding (i.e. not just a guess)
+* Specific enough (i.e. not too broad as to be unhelpful)
+* Actually testable (i.e. something you have the data to test)
 
-You can find an example annotated bibliography [here](https://classroom.google.com/c/NDg3ODE3MzU4NzEw/m/NDg3ODE4MDY2ODEw/details)
+You should do the following as a team:
+
+1. Create a list of at least three possible hypotheses that you think you could test using your data
+
+1. For each write down a list of possible factors that might limit your ability to test this hypothesis with your data. Note how important each might be and what possible mitigation you might apply.
+
+1. For each sketch a figure that you might produce that could confirm or refute your data - what would the data look like if your hypothesis was confirmed?
+
+Once you have these, you should show them to me and we can discuss them and share feedback.
+
+After sign-off from me you should then each individually:
+
+1. Pick one hypothesis to test (can be the same as another group member)
+
+1. Use ggplot to generate a figure (possibly similar to the one you proposed above) that could confirm or refute the hypothesis
+
+1. Create a document that contains the hypothesis, the figure, a description of what the figure shows, and how it either confirms or refutes your hypothesis.
+
+You can submit this individual work to the assignment below.
 
