--- a/content/classes/02-data-report/02-hyptotheses/level-3/index.Rmd
+++ b/content/classes/02-data-report/02-hyptotheses/level-3/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Mind Map'
+title: 'Advanced Hypotheses'
 author: Ben Harden
 date: '2021-05-05'
 level: 3
@@ -7,29 +7,30 @@ slug: []
 categories: []
 tags: []
 draft: no
-quiz: https://classroom.google.com/c/NDg3ODE3MzU4NzEw/a/MzYzMTI0MTIxNTIw/details
 ---
 
-You've got the point where you can search for and extract information from papers. On this level we're going to take our understanding a little deeper by connecting and synthesizing your bibliography.
+By this point you should feel good about the kinds of simple hypotheses you can make about your project data. Our goal here is to help you advance your understanding of appropriate hypotheses and give you some skills to test more advanced ideas.
 
-## Expanding your bibliography
+Your initial hypotheses in [Level 2](../level-2/) may have ended up addressing fundamental features that you really expected to be true. It's a solid way to start on any observational study - focus in on the things you expect to be true and pay attention to anything that doesn't fit your model of how the world works. 
 
-To start with, you should extend your annotated bibliography to 6-8 entries so you encompass a more thorough range or sources.
+Another important step is to use your literature review to highlight aspects of the system that are least well understood. Some of these may have surfaced already for you in reading these papers.
 
-## Mapping your bibliography
+## Exercise
 
-Now that you have an expanded bibliography, we're going to deepen out analysis of how each paper fills in a piece of the scientific picture of your topic.
+You should begin by writing two paragraphs:
 
-Scientists do this in all kinds of different ways, but a typical tool that is helpful is a [mind map](https://mind-map.com/learn-how-to-mind-map/). The goal here is to visually represent the different factors/considerations that affect your chosen topic area. We can then match up what is known to the papers that show us that, and, importantly, find gaps in our understanding that we can fill.
+1. A brief description of the hypotheses your group tested and any features that didn't fit these models of how the world should work. This could include any individual data points that didn't fit with a broader trend, a whole stations where there was clearly something else going on, or indeed any hypotheses that the data couldn't confirm.
 
-To complete this level you will need to make your own mind map of your topic and document how you revised it to find new papers or highlight gaps in understanding.
+1. A brief description of the features of your system that seemed less well understood based on your understanding of the literature review you undertook. This could be things that may not be testable with the data we have to hand.
 
-You should start with your research topic in the center of your map. Include both your topic and the region of interest. This is probably going to be something like: "Nutrient availability in Rhode Island Sound".
+Reflect on these two paragraphs (especially on the first one). They will hopefully guide you towards a new research question and associated hypothesis. Think about:
 
-You can then build our 3-5 factors that impact that. These could include: "local environment", "seasonality", "theoretical underpinning", "why should care?". Allow your bibliography to lead the generation of these categories. 
+* What processes or other factors might explain the anomalies in your data?
+* Do we have data that might allow us to determine the impact of these factors?
+* What additional data might you need to explain these trends?
 
-Under each of these branches you can then start organizing what is known and, importantly, which reference in your bibliography tells you that. If you find yourself in a position where you are making a statement about something you know without a paper on your bibliography to back that up then you should go find a source for that information and add it in.
+Once you have a new research question and hypothesis we should review this and make a plan. That plan will probably look like one of two paths:
 
-Additionally, if you find yourself asking any questions about your topic, then this is a good chance to find resources that may answer those questions. If none can be found then you've highlighted a gap in understanding - really the ultimate goal of any background review.
+1. Test this new hypothesis bringing in new data streams either from the cruise or from other sources
 
-You can do this by hand or on a Google Slide. If you're looking for inspiration then there are tons of ideas our there on Google. Once you've taken a first pass at this mind map, I'll give you some feedback and you can revise/extend that map to create a well-rounded picture of your topic.
+2. Design a research experiment that could potentially answer your proposed question in the region
