--- a/content/classes/03-poster/02-poster-text/level-3/index.Rmd
+++ b/content/classes/03-poster/02-poster-text/level-3/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Collaboration Memo'
+title: 'Alternative Structures'
 author: Ben Harden
 date: '2021-05-05'
 level: 3
@@ -7,34 +7,21 @@ slug: []
 categories: []
 tags: []
 draft: no
-quiz: https://classroom.google.com/c/NDg3ODE3MzU4NzEw/a/NTM0MTgzNDY3MDE1/details
+quiz: https://classroom.google.com/c/NDg3ODE3MzU4NzEw/a/NTM1MzI3NTYzNDE5/details
 ---
 
-If you've chosen to complete this level, you should do so in the final week of class. By this time you will have developed a teamwork contract, reviewed it, attended the WHOI Ethic seminar and seem how your class project team has functioned in reality.
+Many successful posters include much of the info you would find in the traditional structure (Intro, Method, etc.) but organize it into sections that are more descriptive or draw your attention to particular results.
 
-In this level we are going to reflect on our in-class collaboration and make some plans for future teamwork in science.
+We've seen a number of poster examples (both for formal and informal communication) so you may already have some thoughts about organizing your poster information.
 
-## Teamwork reflection
+There are no set rules for how to do this, but one tool that can be useful is to think about section titles as being the main results you want people to focus on. Like with good presentation slide design, it's often a good idea for you section titles to be the main takeaway from that section. This focuses the readers attention to what they are expecting to learn in that section (something that "Results" gives you no clue to). 
 
-Start by using the team contract that you developed as a starting point to analyze how you team functioned. You should write a single page reflection that seeks to answer the following:
+In addition to creating a new structure, I'm also looking for you to work on your concision and edit the text that your group generated to make it sharply focused whilst still maintaining clarity and enough information.
 
-* In general, what did your team do well and what could have been improved?
-* What contribution did you make and did it feel equitable?
-* Which particular parts of the contract were useful as a tool to ensure that teamwork progressed as you might hope?
-* Which parts were too general/vague to be helpful and how would you change some of them to be more useful?
+To achieve sign off on Level 3, you should take you team text and edit it for concision/clarity and to fit underneath alternative section headings. This will probably involve moving some of the text around. 
 
-You should submit this to the assignment below. Once I've had a chance to review it, we can chat about the process.
+It may also be worthwhile to review and think about the story structures presented in [Presentation L3](../../../01-background/03-presentation/level-3/) to see how you might subvert the traditional flow of information in a poster to further draw attention to the key or surprising findings. 
 
-## Ten Questions
+I'd like you to think of this as a low-stakes place to experiment. The text/sections you generate may not end up being used for your groups poster, but it will be useful for you development in science to be thinking about alternative paths to clear communication.
 
-Finally, as a tool for you to use going forward, I'd like you to compose ten questions that you would like to ask yourself the next time you start working as part of a team.
-
-Think about questions that will help you:
-
-* Understand what you can (and want) to bring to the team
-* Examine what you might expect form others
-* Craft a open, supportive environment
-* Generally set both you and the wider team up for success
-
-Submit these questions on the same document as above and we can chat about them.
-and start thinking about craft ten questions that you would 
+Submit your text to the assignment below and I'll give you some feedback.
