--- a/content/classes/03-poster/03-poster/level-1/index.Rmd
+++ b/content/classes/03-poster/03-poster/level-1/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Guest Presentations"
+title: "Poster Design"
 author: Ben Harden
 date: '2021-05-05'
 level: 1
@@ -9,64 +9,33 @@ tags: []
 draft: no
 ---
 
-For this skill set, we are going to be thinking about the broader community around ourselves and our research interests. Initially, that is the community we find ourselves in in Woods Hole.
+Now that you've got a good sense of your main results and possible text, it's time to think about how you want to present that information in your poster.
 
-To get to know that community a little better, I've invited some guest speakers from a range of Woods Hole Institutions to come and give us an introduction to their research and how they found their way to this research community. You job in this level is to engage with the speakers and learn about some of the work that goes on in town.
+Making an effective research poster is not easy, especially for a scientist without any graphic design training. To prepare for the making and presenting of your research posters, we are going to discuss some best practices in graphic design.
 
+To be able to discuss poster design with some theory in mind, I'd like you to read the following resources which talk about graphic design principals:
 
-## June 17th: Ocean Plastics [SEA]
+<https://www.presentationzen.com/chapter6_spread.pdf>
 
-### Dr. Kara Lavender Law
+<https://saylordotorg.github.io/text_business-information-systems-design-an-app-for-that/s07-professionalism-in-deliverable.html>
 
-<img src="kara.jpg" width = "30%" align="left" style="margin-right:15px" />
+<https://blog.usejournal.com/10-basic-principles-of-graphic-design-b74be0dbdb58>
 
-*Research Professor of Oceanography*
+Please take some notes as you read on points that speak to effective poster design.
 
-Dr. Kara Lavender Law is a Research Professor of Oceanography at Sea Education Association (SEA; Woods Hole, MA), studying the sources, distribution, transformation and fate of plastic debris in the ocean.  Trained as a physical oceanographer, Dr. Law has more than 12 months of sea time on oceanographic and sailing research vessels, including in the eastern North Pacific and western North Atlantic Oceans where plastic debris accumulates in regions dubbed, “garbage patches”.  Dr. Law’s current research interests focus on the sources of plastic to the marine environment, understanding how ocean physics determines the distribution of plastic and other marine debris, and the degradation and ultimate fate of different plastic materials in the ocean.  She serves on the U.S. National Academies Committee on U.S. Contributions to Global Ocean Plastic Waste, is vice-chair of the Scientific Committee on Oceanic Research (SCOR) Working Group FLOTSAM (Floating Litter and its Oceanic TranSport Analysis and Modelling), and served as the co-principal investigator of the Marine Debris Working Group at the National Center for Ecological Analysis and Synthesis (NCEAS). Dr. Law holds a PhD in physical oceanography from Scripps Institution of Oceanography and a BS in mathematics from Duke University.  
+In class, we're going to apply some of the design ideas from above to scientific posters more specifically.
 
-### Jessica Donohue
+Below are some poster examples.
 
-<img src="jess.jpeg" width = "30%" align="left" style="margin-right:15px" />
+* [Poster 1](posters/poster1.jpg)
+* [Poster 2](posters/poster2.pdf)
+* [Poster 3](posters/poster3.pdf)
+* [Poster 4](posters/poster4.jpg)
+* [Poster 5](posters/poster5.pdf)
 
-*Research Associate*
+We will assign these posters in class to small goroiup discussions where we will think about:
 
-Jessica Donohue is a Research Associate at Sea Education Association (SEA; Woods Hole, MA), studying marine plastic debris both in the laboratory and from SEA’s sailing research vessels. Ms. Donohue works with microplastics collected using surface plankton nets onboard SEA vessels to determine polymer type and physical characteristics of these particles. This research advances the understanding of how these polymers behave and degrade in the marine environment, and the variability in the composition of microplastics in time and by region. She has an interest in science education outreach and has given numerous talks at public events and schools about the issue of plastic pollution in our oceans. Jessica holds an M.S. from the University of Rhode Island in environmental science/hydrogeology and a B.S. in environmental geology from Binghamton University. 
-
-## June 22: Spinal Cord Regenration [MBL]
-
-### Dr. Jennifer Morgan
-
-<img src="JenMorgan.jpg" align="left" style="margin-right:15px" />
-
-*Director of the Eugene Bell Center*
-
-*Associate Scientist, Marine Biological Laboratory*
-
-Dr. Jennifer Morgan studies the cellular and molecular mechanisms by which neurons communicate with each other at synapses within the vertebrate central nervous system. Current research goals involve identifying the fundamental mechanisms by which neurotransmission is maintained via local synaptic vesicle trafficking. Dr. Morgan also studies how synaptic transmission is restored after spinal cord injury, in particular the contributions that neuronal survival, axon and synapse regeneration, and compensatory neurite plasticity make toward restoring locomotor behaviors.
-
-
-## June 24th: Coastal Changes [USGS]
-
-### Dr. Alfredo Aretxabaleta
-
-<img src="AAretxabaleta.jpg" width = "30%" align="left" style="margin-right:15px" />
-
-*Oceanographer*
-
-Alfredo's (he/him/his),  research mainly focuses in processes controlling water level in coastal environments including tidal effects, storm events, and sea level rise. Another important focus is the investigation of the problems related to sediment transport, especially during storm events, that can affect the redistribution of sediment.
-
-</br>
-
-
-## June 29th: Fisheries Stock Assessmment [NOAA]
-
-### Dr. Larry Alade
-
-<img src="larry-alade.png" width = "30%" align="left" style="margin-right:15px" />
-
-*Supervisor, Research Fishery Biologist*
-
-I am a research fishery biologist and a task leader for the Population Dynamics Branch of the National Oceanic and Atmospheric Administration’s (NOAA) s Northeast Fisheries Science Center at the Woods Hole Laboratory in Woods Hole, Massachusetts. My primary role as a research fishery biologist is to investigate and develop models to assess the health of fish populations in the region and to advise the federal fishery management process. This involves studying and monitoring changes in fish abundance, distribution, and demographics (such as size, age, and sex); measuring and quantifying impacts of fishing activity, and understanding biological and physical processes within the ecosystem that contribute to the observed changes in the fishery resource.
-
-Read more about Dr. Alada [here](https://www.commerce.gov/news/blog/2021/02/spotlight-commerce-dr-larry-alade-supervisory-research-fishery-biologist)
-
+* What is the audience for this poster?
+* How easy was it to get the general message? Why?
+* What design elements were effective?
+* What design elements were ineffective?
